--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=jewelry
 
-spring.datasource.url=jdbc:mysql://localhost:3306/webshopx
+spring.datasource.url=jdbc:mysql://localhost:3306/jewelrywebapp
 spring.datasource.username=root
 spring.datasource.password=taolao123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -9,3 +9,12 @@ spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+api.prefix=/api/v1
+
+cloudinary.cloud_name=dxjusps3n
+cloudinary.api_key=268928962386637
+cloudinary.api_secret=9E91Uo7DXxRZrH9YA5payyyKYk0
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=50MB
