--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,12 @@ cloudinary.api_secret=9E91Uo7DXxRZrH9YA5payyyKYk0
 
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=50MB
+
+VNPay.vnp_TmnCode=LUQLFATB
+VNPay.vnp_HashSecret=XWPHS56NZS35SH1G1079IEDN9MY7UIQE
+VNPay.vnp_Url=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
+
+MoMo.url=https://test-payment.momo.vn/v2/gateway/api
+MoMo.partnerCode=MOMOLRJZ20181206
+MoMo.accessKey=mTCKt9W3eU1m39TW
+MoMo.secret=SetA5RDnLHvt51AULf51DyauxUo3kDU6
