--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,3 +27,7 @@ MoMo.url=https://test-payment.momo.vn/v2/gateway/api
 MoMo.partnerCode=MOMOLRJZ20181206
 MoMo.accessKey=mTCKt9W3eU1m39TW
 MoMo.secret=SetA5RDnLHvt51AULf51DyauxUo3kDU6
+
+ghtk.url.fee=https://services.giaohangtietkiem.vn/services/shipment/fee
+ghtk.Token=1CNutvENdg4EXNDwVO60wBQNB7iYpCGkULFeNmG
+ghtk.X-Client-Source=S22878952
