--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,7 +23,7 @@ VNPay.vnp_TmnCode=LUQLFATB
 VNPay.vnp_HashSecret=XWPHS56NZS35SH1G1079IEDN9MY7UIQE
 VNPay.vnp_Url=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
 
-MoMo.url=https://test-payment.momo.vn/v2/gateway/api
+MoMo.url=https://test-payment.momo.vn/v2/gateway/api/create
 MoMo.partnerCode=MOMOLRJZ20181206
 MoMo.accessKey=mTCKt9W3eU1m39TW
 MoMo.secret=SetA5RDnLHvt51AULf51DyauxUo3kDU6
