--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=jewelry
 
 spring.datasource.url=jdbc:mysql://localhost:3306/jewelrywebapp
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=taolao123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
 
