--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
 
+app.image.upload-dir=uploads/images
 api.prefix=/api/v1
 FE_BASE_URL=http://localhost:5173
 
