--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=jewelry
 
-spring.datasource.url=jdbc:mysql://localhost:3306/jewelrywebapp
+spring.datasource.url=jdbc:mysql://localhost:5211/jewelrywebapp
 spring.datasource.username=root
-spring.datasource.password=taolao123
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
 
